# blueprints

./: README.md  pyproject.toml  requirements.txt
blueprints/hello_world/: resources.yml
tests/: test_hello_world.py
tests/blueprints/hello_world/: resource_schema.json  resources.yml
