[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ftl_blueprints"
version = "0.0.1"
authors = [
    {name = "Ben Thomasson", email = "ben.thomasson@gmail.com"},
]
description = "Blueprints"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
